test/langtools/tools/javac/valhalla/lworld-values/CheckExtends.out
CheckExtends.java:8:13: compiler.err.value.may.not.extend
1 error
